--- a/InternManagement/Pages/Index.cshtml
+++ b/InternManagement/Pages/Index.cshtml
@@ -63,7 +63,7 @@
 
     <div style="margin-top: 20px; background-color:white ;border-radius:20px ;/* padding:30px */">
         <!-- Calendar Container -->
-        <div id="calendar" style="/* width: 300px; height: 300px; */ margin-left:200px;margin-right:200px; padding-bottom:50px;padding-top:50px"></div>
+        <div id="calendar" style="margin: 20px auto; max-width: 1000px;"></div>
     </div>
 </div>
 
@@ -140,8 +140,25 @@
         color: #999; /* Text color for other month days */
     }
     .fc-daygrid-event {
-        overflow-y: auto; 
-        white-space: nowrap;
+        white-space: normal;
+        overflow: hidden;
+        max-height: 30px;
+    }
+
+    .fc-event-title {
+        font-size: 0.8em;
+        line-height: 1.2;
+    }
+
+    .tippy-box {
+        background-color: #333;
+        color: #fff;
+        border-radius: 4px;
+        font-size: 14px;
+    }
+
+    .tippy-content {
+        padding: 8px 12px;
     }
 
 </style>
