--- a/InternManagement/Pages/Users/Edit.cshtml
+++ b/InternManagement/Pages/Users/Edit.cshtml
@@ -5,7 +5,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
 
 <h4>User</h4>
 <hr />
@@ -26,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="User.Password" class="control-label">New Password</label>
-                <input asp-for="User.Password" class="form-control" autocomplete="off" />
+                <input asp-for="User.Password" class="form-control" autocomplete="off" value="" />
                 <span asp-validation-for="User.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
