--- a/InternManagement/Pages/Index.cshtml
+++ b/InternManagement/Pages/Index.cshtml
@@ -18,14 +18,14 @@
             toastr.success('@TempData["done"]');
         </script>
     }
-    @if (TempData["Approve"] != null)
+@*     @if (TempData["Approve"] != null)
     {
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
         <script type="text/javascript">
             toastr.warning('@TempData["Approve"]');
         </script>
-    }
+    } *@
 </div>
 <div style="margin-top: 20px; background-color: bisque; height: fit-content; border-radius: 20px; padding: 20px;">
  
