--- a/InternManagement/Pages/Shared/_Layout.cshtml
+++ b/InternManagement/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="~/InternManagement.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
     <style>
         body {
             overflow-x: hidden; /* Disable horizontal scrollbar */
@@ -26,54 +25,79 @@
             background-color: #007bff;
         }
 
-            .sidebar .logo-area {
-                margin: 20px auto 0;
-                text-align: center;
-            }
-
-            .sidebar .menu-area {
-                display: flex;
-                flex-direction: column;
-                width: 100%;
-                padding: 10px;
-                flex-grow: 1;
-            }
-
-                .sidebar .menu-area .btn {
-                    margin-bottom: 10px;
-                }
-
-            .sidebar .logout-area {
-                background-color: #163851;
-                height: 60px;
-                width: 100%;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                padding: 0 10px;
-            }
-
-        .main-content {
-            margin-left: 200px;
-            padding: 20px;
-            width: calc(100% - 200px);
+        .sidebar .logo-area {
+            margin: 20px auto 0;
+            text-align: center;
         }
 
-        .header {
+        .sidebar .menu-area {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            padding: 10px;
+            flex-grow: 1;
+        }
+
+        .sidebar .menu-area .btn {
+            margin-bottom: 10px;
+        }
+
+        .sidebar .logout-area {
+            background-color: #163851;
+            height: 60px;
+            width: 100%;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px;
+            padding: 0 10px;
         }
 
-            .header .notifications {
-                position: relative;
-            }
+    .main-content {
+        margin-left: 200px;
+        padding: 20px;
+        width: calc(100% - 200px);
+    }
 
-                .header .notifications .btn {
-                    display: flex;
-                    align-items: center;
-                }
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    .header .notifications {
+        position: relative;
+    }
+
+    .header .notifications .btn {
+        display: flex;
+        align-items: center;
+    }
+    .icon-wrapper{
+        width: 25px;
+            height: 25px;
+    }
+    .icon-wrapper::after{
+        content: attr(data-number);
+                width: 15px;
+        height: 15px;
+        background-color: red;
+        color: white;
+        display: grid;
+        place-content: center;
+        border-radius: 50%;
+        position: absolute;
+        top: 5px;
+        right: 0;
+        opacity: 0;
+        transform: translateY(3px);
+    }
+    .icon-wrapper:hover:after{
+        opacity: 1;
+        transform: translateY(0);
+        transition: opacity .25s;
+        transform .25s;
+    }
     </style>
 </head>
 <body>
@@ -195,13 +219,15 @@
                 <h1 class="header-title">@ViewData["Title"]</h1>
                 <div class="notifications">
                     <button class="btn btn-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <span class="badge badge-pill badge-danger">3</span> <!-- Adjust this count dynamically -->
+                        <span class="badge badge-pill badge-danger">
+                            <div class="icon-wrapper" data-number="1">
+                                <img src="~/image/notification-bell-svgrepo-com.svg" class="bell-icon" style="width: 100%; height: 100%"   />
+                            </div>
+                        </span>
                         <i class="fas fa-bell"></i>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="#">Notification 1</a></li>
-                        <li><a class="dropdown-item" href="#">Notification 2</a></li>
-                        <li><a class="dropdown-item" href="#">Notification 3</a></li>
+                        
                     </ul>
                 </div>
             </header>
