--- a/InternManagement/Pages/Assignments/Edit.cshtml
+++ b/InternManagement/Pages/Assignments/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model EditModel
+@model InternManagement.Pages.Assignments.EditModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Assignment";
 }
 
 <h4>User</h4>
