--- a/InternManagement/Pages/Assignments/AssignmentManagement.cshtml
+++ b/InternManagement/Pages/Assignments/AssignmentManagement.cshtml
@@ -20,32 +20,22 @@
                 <span asp-validation-for="Assignment.Deadline" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Assignment.Grade" class="control-label"></label>
-                <input asp-for="Assignment.Grade" class="form-control" />
-                <span asp-validation-for="Assignment.Grade" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Assignment.Weight" class="control-label"></label>
-                <input asp-for="Assignment.Weight" class="form-control" />
-                <span asp-validation-for="Assignment.Weight" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="form-check">
-                    <input asp-for="Assignment.Complete" class="form-check-input" type="checkbox" />
-                    <label asp-for="Assignment.Complete" class="form-check-label"></label>
-                </div>
-                <span asp-validation-for="Assignment.Complete" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label for="teamId" class="control-label">Team</label>
                 <select asp-for="Assignment.TeamId" class="form-control" asp-items="Model.Teams">
                     <option value="">Select a team</option>
                 </select>
                 <span asp-validation-for="Assignment.TeamId" class="text-danger"></span>
             </div>
+            
+            <div class="form-group">
+                <label asp-for="Assignment.Weight" class="control-label"></label>
+                <input asp-for="Assignment.Weight" class="form-control" />
+                <span asp-validation-for="Assignment.Weight" class="text-danger"></span>
+            </div>
             <div class="form-group mt-3">
                 <input type="submit" value="Create Assignment" class="btn btn-primary" />
             </div>
+         
         </form>
     </div>
     <div class="col-md-8">
@@ -93,7 +83,7 @@
                                     @Html.DisplayFor(modelItem => item.Complete)
                                 </td>
                                 <td>
-                                    <a asp-page="./Edit" asp-route-id="@item.AssignmentId" class="btn btn-primary">Edit</a> |
+                                    <a asp-page="/Assignments/Edit" asp-route-id="@item.AssignmentId" class="btn btn-primary">Edit</a> |
                                     <a asp-page="./Delete" asp-route-id="@item.AssignmentId" class="btn btn-danger">Delete</a>
                                 </td>
                             </tr>
