--- a/InternManagement/Pages/Assignments/Delete.cshtml
+++ b/InternManagement/Pages/Assignments/Delete.cshtml
@@ -3,32 +3,35 @@
 @{
     ViewData["Title"] = "Delete Assignment";
 }
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Assignment</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Assignment.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Assignment.Deadline)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Assignment.Grade)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Assignment.Weight)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Assignment.Complete)
-        </dt>
-        
-    </dl>
+<h3>Are you sure you want to delete this assignment?</h3>
 
-    <form method="post">
-        <input type="hidden" asp-for="Assignment.AssignmentId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
-</div>
+<form method="post">
+    <div class="form-group">
+        <label asp-for="Assignment.Description" class="control-label"></label>
+        <input asp-for="Assignment.Description" class="form-control" readonly />
+        <span asp-validation-for="Assignment.Description" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Assignment.Deadline" class="control-label"></label>
+        <input asp-for="Assignment.Deadline" class="form-control" readonly />
+        <span asp-validation-for="Assignment.Deadline" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Assignment.Weight" class="control-label"></label>
+        <input asp-for="Assignment.Weight" class="form-control" readonly />
+        <span asp-validation-for="Assignment.Weight" class="text-danger"></span>
+    </div>
+
+    <!-- Display the Team Name -->
+    <div class="form-group">
+        <label>Team Name</label>
+        <input type="text" class="form-control" value="@Model.Team.TeamName" readonly />
+    </div>
+
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a asp-page="./Index" class="btn btn-secondary">Cancel</a>
+</form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
