--- a/InternManagement/Pages/Interns/ManageInterns.cshtml
+++ b/InternManagement/Pages/Interns/ManageInterns.cshtml
@@ -39,7 +39,11 @@
             @foreach (var intern in Model.Interns)
             {
                 <tr>
-                    <td>@intern.FullName</td>
+                    <td>
+                        <a href="#" class="intern-details-link" data-bs-toggle="modal" data-bs-target="#internDetailsModal" data-id="@intern.InternId">
+                            @intern.FullName
+                        </a>
+                    </td>
                     <td>@intern.Email</td>
                     <td>@intern.PhoneNumber</td>
                     <td>@intern.Uni</td>
@@ -120,3 +124,38 @@
         </form>
     </div>
 }
+</div>
+<div class="modal fade" id="internDetailsModal" tabindex="-1" aria-labelledby="internDetailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="internDetailsModalLabel">Intern Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="internDetailsContent">
+                <!-- Intern details will be loaded here -->
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+<script>
+     $(document).ready(function () {
+         $('.intern-details-link').on('click', function () {
+             var internId = $(this).data('id');
+             $.ajax({
+                 url: '/Admin/ApproveInternships?handler=InternDetails',
+                 type: 'GET',
+                 data: { id: internId },
+                 success: function (data) {
+                     $('#internDetailsContent').html(data);
+                     $('#internDetailsModal').modal('show');
+                 },
+                 error: function () {
+                     alert('An error occurred while fetching intern details.');
+                 }
+             });
+         });
+     });
+</script>
