--- a/InternManagement/Pages/Assignments/AssignmentManagement.cshtml
+++ b/InternManagement/Pages/Assignments/AssignmentManagement.cshtml
@@ -29,8 +29,10 @@
                 <span asp-validation-for="Assignment.Weight" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Assignment.Complete" class="control-label"></label>
-                <input asp-for="Assignment.Complete" class="form-control" type="password" />
+                <div class="form-check">
+                    <input asp-for="Assignment.Complete" class="form-check-input" type="checkbox" />
+                    <label asp-for="Assignment.Complete" class="form-check-label"></label>
+                </div>
                 <span asp-validation-for="Assignment.Complete" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
@@ -95,6 +97,6 @@
         }
         else
         {
-            <p>No users available.</p>
+            <p>No table available.</p>
         }
     </div>
