--- a/InternManagement/Pages/Assignments/Edit.cshtml
+++ b/InternManagement/Pages/Assignments/Edit.cshtml
@@ -32,8 +32,10 @@
                 <span asp-validation-for="Assignment.Weight" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Assignment.Complete" class="control-label">New Password</label>
-                <input asp-for="Assignment.Complete" class="form-control" autocomplete="off" value="" />
+                <div class="form-check">
+                    <input asp-for="Assignment.Complete" class="form-check-input" type="checkbox" />
+                    <label asp-for="Assignment.Complete" class="form-check-label"></label>
+                </div>
                 <span asp-validation-for="Assignment.Complete" class="text-danger"></span>
             </div>
          
