--- a/InternManagement/Pages/Interns/ManageInterns.cshtml
+++ b/InternManagement/Pages/Interns/ManageInterns.cshtml
@@ -24,6 +24,7 @@
     <table class="table table-striped">
         <thead>
             <tr>
+                <th></th>
                 <th>Full Name</th>
                 <th>Email</th>
                 <th>Phone</th>
@@ -39,6 +40,7 @@
             @foreach (var intern in Model.Interns)
             {
                 <tr>
+                    <td>@intern.PhotoUrl</td>
                     <td>
                         <a href="#" class="intern-details-link" data-bs-toggle="modal" data-bs-target="#internDetailsModal" data-id="@intern.InternId">
                             @intern.FullName
