--- a/InternManagement/Pages/Interns/ManageInterns.cshtml
+++ b/InternManagement/Pages/Interns/ManageInterns.cshtml
@@ -77,8 +77,12 @@
                     <th>Deadline</th>
                     <th>Grade</th>
                     <th>Weight</th>
+                    <th>FeedBack</th>
+                    <th>Answer</th>
+
                     <th>Complete</th>
                     <th></th>
+
                 </tr>
             </thead>
             <tbody>
@@ -89,11 +93,17 @@
                         <td>@assignment.Deadline?.ToString("yyyy-MM-dd")</td>
                         <td>@assignment.Grade</td>
                         <td>@assignment.Weight</td>
+                        <td>@assignment.Feedback</td>
+                        <td>@assignment.Submited</td>
                         <td>@assignment.Complete</td>
+
                         <td>
-                            <form method="post" asp-page-handler="DeleteAssignment" asp-route-assignmentId="@assignment.AssignmentId" onsubmit="return confirm('Are you sure you want to delete this assignment?');">
-                                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                            </form>
+                            <div style="display: flex; align-items: center;">
+                                <a asp-page="/Assignments/Grade" asp-route-id="@assignment.AssignmentId" class="btn btn-primary" style="width: 100px; text-align: center;">Grade</a>
+                                <form method="post" asp-page-handler="DeleteAssignment" asp-route-assignmentId="@assignment.AssignmentId" onsubmit="return confirm('Are you sure you want to delete this assignment?');" style="margin-left: 10px;">
+                                    <button type="submit" class="btn btn-danger btn-sm" style="width: 100px; text-align: center;height:40px">Delete</button>
+                                </form>
+                            </div>
                         </td>
                     </tr>
                 }
