--- a/InternManagement/Pages/Interns/GradeInterns.cshtml
+++ b/InternManagement/Pages/Interns/GradeInterns.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model InternManagement.Pages.Interns.ManageInternAdminModel
+@model InternManagement.Pages.Interns.GradeInternModel
 @{
-    ViewData["Title"] = "Manage Interns";
+    ViewData["Title"] = "Grade Interns";
 }
 <style>
      .short-select {
@@ -42,7 +42,14 @@
             @foreach (var intern in Model.Interns)
             {
                 <tr>
-                    <td>@intern.PhotoUrl</td>
+                    <td>
+                        @if (intern.PhotoUrl != null && intern.PhotoUrl.Length > 0)
+                        {
+                            var base64Photo = Convert.ToBase64String(intern.PhotoUrl);
+                            var imgSrc = String.Format("data:image/jpeg;base64,{0}", base64Photo);
+                            <img src="@imgSrc" alt="Intern Photo" class="img-thumbnail" style="max-width: 200px;" />
+                        }
+                    </td>
                     <td>
                         <a href="#" class="intern-details-link" data-bs-toggle="modal" data-bs-target="#internDetailsModal" data-id="@intern.InternId">
                             @intern.FullName
@@ -117,21 +124,21 @@
         </table>
     </div>
 }
-</div>
-<div class="modal fade" id="internDetailsModal" tabindex="-1" aria-labelledby="internDetailsModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="internDetailsModalLabel">Intern Details</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body" id="internDetailsContent">
-                <!-- Intern details will be loaded here -->
+
+    <div class="modal fade" id="internDetailsModal" tabindex="-1" aria-labelledby="internDetailsModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="internDetailsModalLabel">Intern Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="internDetailsContent">
+                    <!-- Intern details will be loaded here -->
+                </div>
             </div>
         </div>
     </div>
-</div>
-</div>
+
 
 <script>
      $(document).ready(function () {
