--- a/InternManagement/Pages/Interns/ManageInterns.cshtml
+++ b/InternManagement/Pages/Interns/ManageInterns.cshtml
@@ -9,15 +9,13 @@
      }
 </style>
 <form method="get">
-    <div class="form-group row mb-2">
-        <label for="TeamId" class="col-sm-2 col-form-label" style="width:fit-content">Select Team:</label>
-        <div class="col-sm-10">
-            <select id="TeamId" name="TeamId" asp-items="Model.TeamsSelectList" class="form-control mt-1 short-select" onchange="this.form.submit()">
-                <option value="" class="text-Start">Choose team</option>
-            </select>
-        </div>
-    </div>
+    <div class="form-group">
+        <label for="TeamId">Select Team:</label>
+        <select id="TeamId" name="TeamId" asp-items="Model.TeamsSelectList" class="form-control mt-1 short-select" onchange="this.form.submit()">
+            <option value="" class="text-center">--- Select a Team ---</option>
+        </select>
 
+    </div>
 </form>
 
 @if (Model.SelectedTeam != null)
@@ -42,14 +40,7 @@
             @foreach (var intern in Model.Interns)
             {
                 <tr>
-                    <td>
-                        @if (intern.PhotoUrl != null && intern.PhotoUrl.Length > 0)
-                        {
-                            var base64Photo = Convert.ToBase64String(intern.PhotoUrl);
-                            var imgSrc = String.Format("data:image/jpeg;base64,{0}", base64Photo);
-                            <img src="@imgSrc" alt="Intern Photo" class="img-thumbnail" style="max-width: 200px;" />
-                        }
-                    </td>
+                    <td>@intern.PhotoUrl</td>
                     <td>
                         <a href="#" class="intern-details-link" data-bs-toggle="modal" data-bs-target="#internDetailsModal" data-id="@intern.InternId">
                             @intern.FullName
@@ -86,12 +77,8 @@
                     <th>Deadline</th>
                     <th>Grade</th>
                     <th>Weight</th>
-                    <th>FeedBack</th>
-                    <th>Answer</th>
-
                     <th>Complete</th>
                     <th></th>
-
                 </tr>
             </thead>
             <tbody>
@@ -102,21 +89,11 @@
                         <td>@assignment.Deadline?.ToString("yyyy-MM-dd")</td>
                         <td>@assignment.Grade</td>
                         <td>@assignment.Weight</td>
-                        <td>@assignment.Feedback</td>
-                        <td>@assignment.Submited</td>
+                        <td>@assignment.Complete</td>
                         <td>
-                            <div class="form-check" >
-                                <input class="form-check-input" type="checkbox" style="width:30px; height:30px" disabled @(assignment.Complete ? "checked" : "") />
-                            </div>
-                        </td>
-
-                        <td>
-                            <div style="display: flex; align-items: center;">
-                                <a asp-page="/Assignments/Grade" asp-route-id="@assignment.AssignmentId" class="btn btn-primary" style="width: 100px; text-align: center;">Grade</a>
-                                <form method="post" asp-page-handler="DeleteAssignment" asp-route-assignmentId="@assignment.AssignmentId" onsubmit="return confirm('Are you sure you want to delete this assignment?');" style="margin-left: 10px;">
-                                    <button type="submit" class="btn btn-danger btn-sm" style="width: 100px; text-align: center;height:40px">Delete</button>
-                                </form>
-                            </div>
+                            <form method="post" asp-page-handler="DeleteAssignment" asp-route-assignmentId="@assignment.AssignmentId" onsubmit="return confirm('Are you sure you want to delete this assignment?');">
+                                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                            </form>
                         </td>
                     </tr>
                 }
