--- a/InternManagement/Pages/Users/Index.cshtml
+++ b/InternManagement/Pages/Users/Index.cshtml
@@ -103,7 +103,7 @@
                 <div class="form-group">
                     <label for="UserId">Select Supervisor:</label>
                     <select id="UserId" name="UserId" asp-items="Model.SupervisorSelectList" class="form-control mt-1 short-select">
-                        <option value="" class="text-center">--- Select a Team ---</option>
+                        <option value="" class="text-center">--- Select Supervisor ---</option>
                     </select>
 
                 </div>
