--- a/InternManagement/Pages/Interns/ManageInterns.cshtml
+++ b/InternManagement/Pages/Interns/ManageInterns.cshtml
@@ -40,7 +40,14 @@
             @foreach (var intern in Model.Interns)
             {
                 <tr>
-                    <td>@intern.PhotoUrl</td>
+                    <td style>
+                        @if (intern.PhotoUrl != null && intern.PhotoUrl.Length > 0)
+                        {
+                            var base64Photo = Convert.ToBase64String(intern.PhotoUrl);
+                            var imgSrc = String.Format("data:image/jpeg;base64,{0}", base64Photo);
+                            <img src="@imgSrc" alt="Intern Photo" class="img-thumbnail"/>
+                        }
+                    </td>
                     <td>
                         <a href="#" class="intern-details-link" data-bs-toggle="modal" data-bs-target="#internDetailsModal" data-id="@intern.InternId">
                             @intern.FullName
@@ -101,7 +108,6 @@
         </table>
     </div>
 }
-</div>
 <div class="modal fade" id="internDetailsModal" tabindex="-1" aria-labelledby="internDetailsModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -115,24 +121,24 @@
         </div>
     </div>
 </div>
-</div>
-
+<script src="~/lib/jquery/jquery.min.js"></script>
+<script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script>
-     $(document).ready(function () {
-         $('.intern-details-link').on('click', function () {
-             var internId = $(this).data('id');
-             $.ajax({
-                 url: '/Admin/ApproveInternships?handler=InternDetails',
-                 type: 'GET',
-                 data: { id: internId },
-                 success: function (data) {
-                     $('#internDetailsContent').html(data);
-                     $('#internDetailsModal').modal('show');
-                 },
-                 error: function () {
-                     alert('An error occurred while fetching intern details.');
-                 }
-             });
-         });
-     });
+    $(document).ready(function () {
+        $('.intern-details-link').on('click', function () {
+            var internId = $(this).data('id');
+            $.ajax({
+                url: '/Admin/ApproveInternships?handler=InternDetails',
+                type: 'GET',
+                data: { id: internId },
+                success: function (data) {
+                    $('#internDetailsContent').html(data);
+                    $('#internDetailsModal').modal('show');
+                },
+                error: function () {
+                    alert('An error occurred while fetching intern details.');
+                }
+            });
+        });
+    });
 </script>
