--- a/InternManagement/Pages/Admin/Create.cshtml
+++ b/InternManagement/Pages/Admin/Create.cshtml
@@ -23,11 +23,11 @@
                 <input asp-for="Campaign.Description" class="form-control" />
                 <span asp-validation-for="Campaign.Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*             <div class="form-group">
                 <label asp-for="Campaign.CreatedDate" class="control-label"></label>
                 <input asp-for="Campaign.CreatedDate" class="form-control" />
                 <span asp-validation-for="Campaign.CreatedDate" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="Campaign.StartDate" class="control-label"></label>
                 <input asp-for="Campaign.StartDate" class="form-control" />
@@ -38,14 +38,16 @@
                 <input asp-for="Campaign.EndDate" class="form-control" />
                 <span asp-validation-for="Campaign.EndDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*             <div class="form-group">
                 <label asp-for="Campaign.CreatedBy" class="control-label"></label>
                 <input asp-for="Campaign.CreatedBy" class="form-control" />
                 <span asp-validation-for="Campaign.CreatedBy" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
-                <label asp-for="Campaign.TeamId" class="control-label"></label>
-                <select asp-for="Campaign.TeamId" class ="form-control" asp-items="ViewBag.TeamId"></select>
+                <label for="TeamId">Select Supervisor:</label>
+                <select id="TeamId" name="TeamId" asp-items="Model.TeamSelectListItem" class="form-control mt-1 short-select">
+                    <option value="" class="text-center">--- Select Team ---</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Campaign.Progress" class="control-label"></label>
@@ -53,9 +55,13 @@
                 <span asp-validation-for="Campaign.Progress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Campaign.PictureUrl" class="control-label"></label>
-                <input asp-for="Campaign.PictureUrl" class="form-control" />
-                <span asp-validation-for="Campaign.PictureUrl" class="text-danger"></span>
+                <label asp-for="Campaign.PictureUrl">Company</label>
+                <input asp-for="Campaign.PictureUrl" type="file" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Campaign.Status" class="control-label"></label>
+                <input asp-for="Campaign.Status" class="form-control" />
+                <span asp-validation-for="Campaign.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
